updated backend version to v1.1
