# app/models/audio.py
@@ -1,23 +1,23 @@
 from app.models import db
 from app.models.root_model import RootModel
 
+
 class Audio(RootModel):
     _tablename_ = "audio"
 
     id = db.Column(db.Integer, primary_key=True)
-    audio_name = db.Column(db.String,nullable=False)
+    audio_name = db.Column(db.String, nullable=False)
     audio_url = db.Column(db.String, nullable=False)
 
-    
     def serialize(self):
         return {
-        'id': self.id
+            'id': self.id
         }
 
     @property
     def transform(self):
         return {
-        'id': self.id,
-        'audio_name': self.audio_name,
-        'audio_url' : self.audio_url
+            'id': self.id,
+            'audio_name': self.audio_name,
+            'audio_url': self.audio_url
         }
